<resources>
    <string name="app_name">Authentication</string>
    <!-- Strings related to login -->
    <string name="prompt_userid">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="action_login_in">Login</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">SignUp</string>
    <string name="logo">Logo</string>

    <string name="list">Books</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_contact">Phone Number</string>
    <string name="prompt_password_verify">Verify Password</string>
    <string name="logout">Logout</string>
    <string name="new_user_text">New User?</string>
</resources>
